--- a/exercicios/EX022/fundo006.html
+++ b/exercicios/EX022/fundo006.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            background-color: black;
+            height: 100vh;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+             Shorthand - background
+                color -> image -> position -> repeat -> [size] -> attachment 
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +37,14 @@
     <main>
         <h1>Teste de fundo de imagem</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit accusamus minima, quae amet, optio quasi expedita pariatur maxime error totam, perspiciatis nisi ratione fugiat ab repellat neque similique sint ipsam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quia expedita assumenda ex quibusdam? Voluptatibus reiciendis aliquam sapiente sequi sint rerum beatae, non adipisci corporis a eos similique earum? Eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates mollitia illum. Perferendis reprehenderit, non animi voluptatibus, magni nostrum consequatur modi est amet id harum hic, totam temporibus molestiae in.</p>
+
     </main>
     
 </body>
