--- a/exercicios/EX022/fundo006.html
+++ b/exercicios/EX022/fundo006.html
@@ -29,6 +29,7 @@
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+            text-align: justify;
         
         }
     </style>
